<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvJump"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|top"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_cr_gray"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:text="@string/jump_"
            android:textColor="@color/textWhite"
            android:textSize="@dimen/text_size_normal" />

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            ads:adSize="MEDIUM_RECTANGLE"
            ads:adUnitId="ca-app-pub-1273595572669178/4090693298"></com.google.android.gms.ads.AdView>
    </FrameLayout>

    <LinearLayout
        android:elevation="1dp"
        android:background="@color/colorPrimary"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/icon"
            android:layout_width="80dp"
            android:layout_height="80dp" />
        <LinearLayout
            android:layout_marginLeft="25dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/app_name"
                android:textSize="@dimen/text_size_normal_xxxx"
                android:textColor="@color/textWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="15dp"
                android:text="@string/app_desc"
                android:textSize="@dimen/text_size_normal_xx"
                android:textColor="@color/textWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>